--- a/style.css
+++ b/style.css
@@ -8,10 +8,13 @@
 }
 
 /*=======================*/
+body {
+    background: url(https://www.netpremacy.com/wp-content/uploads/2018/09/Background-website-01.jpg);
+    background-size: cover;
 
+}
 .team{
   height: 500px;
-  background: #dcdcdc;
   text-align: center;
 }
 .team-box{
@@ -19,10 +22,12 @@
   margin: auto;
   padding: 40px;
   color: #333;
+  border-radius: 10px;
   overflow: hidden;
 }
 .team h1{
   font-size: 20px;
+  font-family: 'Roboto', sans-serif;
   text-transform: uppercase;
   display: inline-block;
   border-bottom: 2px solid;
@@ -118,9 +123,9 @@
   width: 100%;
   padding: 0 20px;
   font-family: 'Roboto', sans-serif;
-  background: url(https://prog-8.com/images/html/advanced/top_en.png);
   background-size: cover;
 }
+
 
 .message-wrapper h2 {
   opacity: 0.7;
