--- a/style.css
+++ b/style.css
@@ -11,11 +11,23 @@
 body {
     background: url(https://www.netpremacy.com/wp-content/uploads/2018/09/Background-website-01.jpg);
     background-size: cover;
-
+    font-family: 'Roboto', sans-serif;
 }
 .team{
   height: 500px;
   text-align: center;
+}
+.about h2{
+  text-align: center;
+  text-decoration: underline;
+}
+
+.about{
+  text-align: justify;
+  margin: auto;
+  padding: 120px;
+  opacity: 40%;
+  background: #ccc;
 }
 .team-box{
   max-width: 1200px;
