--- a/style.css
+++ b/style.css
@@ -17,23 +17,7 @@ body {
   height: 500px;
   text-align: center;
 }
-.about h2{
-  font-size: 20px;
-  text-transform: uppercase;
-  display: inline-block;
-  border-bottom: 2px solid;
-  padding-bottom: 10px;
-  margin-bottom: 30px;
-}
-.about{
-  border-radius: 20px;
-  text-align: justify;
-  margin: auto;
-  padding: 120px;
-  opacity: 40%;
-  background: #ccc;
-  margin-bottom: 70px;
-}
+
 .team-box{
   max-width: 1200px;
   margin: auto;
@@ -141,6 +125,7 @@ body {
   padding: 0 20px;
   font-family: 'Roboto', sans-serif;
   background-size: cover;
+  margin-top: 70px;
 }
 
 
@@ -270,7 +255,46 @@ body {
   height: 100px;
   margin: auto;
 }
-
+.about-section {
+    width: 100%;
+    background: #f1f1f1;
+    padding: 40px 0 ;
+}
+.inner-width {
+    max-width: 1000px;
+    overflow: hidden;
+    padding: 0 20px;
+    margin: auto;
+}
+. about-section h1 {
+    text-align: center;
+}
+.border {
+    width: 100px;
+    height: 3px;
+    background: #e74c3c;
+    margin: 40px;
+}
+.about {
+    padding-right: 30px;
+}
+.about p {
+    text-align: justify;
+    margin-bottom: 20px;
+}
+.about a {
+    display: inline-block;
+    color:#e74c3c;
+    text-decoration: none;
+    border: 2px solid #e74c3c;
+    border-radius: 24px;
+    padding: 8px 40px;
+    transition: 0.4s linear;
+}
+.about a:hover {
+    color: #fff;
+    background:#e74c3c;
+}
 
 @media screen and (max-width: 300px) {
   .contact-form {
